--- a/dict/templates/base.html.twig
+++ b/dict/templates/base.html.twig
@@ -2,23 +2,10 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <meta name="msapplication-TileImage" content="assets/img/favicons/mstile-150x150.png">
-        <meta name="theme-color" content="#ffffff">
-        <title>{% block title %}InstaKilo{% endblock %}</title>
-        <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&amp;display=swap" rel="stylesheet">
-            
+        <title>{% block title %}Projet dictionnaire{% endblock %}</title>
+
         {% block stylesheets %}
-             <link rel="apple-touch-icon" sizes="180x180" href="assets/img/favicons/apple-touch-icon.png">
-            <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicons/favicon-32x32.png">
-            <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicons/favicon-16x16.png">
-            <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicons/favicon.ico">
-            <link rel="manifest" href="assets/img/favicons/manifest.json">
-            <link rel="preconnect" href="https://fonts.gstatic.com">
-            <link href="vendors/prism/prism.css" rel="stylesheet">
-            <link href="vendors/swiper/swiper-bundle.min.css" rel="stylesheet">
-            <link href="assets/css/theme.css" rel="stylesheet" />
-            <link href="assets/css/user.css" rel="stylesheet" />
-            <link href="assets/css/grid.css" rel="stylesheet" />
+
         {% endblock %}
 
     </head>
@@ -37,15 +24,6 @@
 
 
         {#Les scripts javascripts#}
-        <script src="vendors/popper/popper.min.js"></script>
-        <script src="vendors/bootstrap/bootstrap.min.js"></script>
-        <script src="vendors/anchorjs/anchor.min.js"></script>
-        <script src="vendors/is/is.min.js"></script>
-        <script src="vendors/fontawesome/all.min.js"></script>
-        <script src="vendors/lodash/lodash.min.js"></script>
-        <script src="https://polyfill.io/v3/polyfill.min.js?features=window.scroll"></script>
-        <script src="vendors/prism/prism.js"></script>
-        <script src="vendors/swiper/swiper-bundle.min.js"></script>
-        <script src="assets/js/theme.js"></script>
+        
     </body>
 </html>
