Commande ajout user + un peu de front

--- a/dict/templates/security/login.html.twig
+++ b/dict/templates/security/login.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
 <section class="vh-100">
-    <div class="container-fluid h-custom">
+    <div class="allFormClass">
         <div class="row d-flex justify-content-center align-items-center h-100">
 
             <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
@@ -19,11 +19,11 @@
 
                     <div class="w-4/5 m-auto text-center">
                         <div class="py-12 border-b border-gray-200">
-                            <h1 class="text-6xl pt-12 pb-8">
+                            <h1 class="connexionText">
                                 Connexion
                             </h1>
                     
-                            <div class="form-outline mb-4">
+                            <div class="form-outline">
                                 <label class="form-label">Email</label>
                                 <input 
                                     type="email" 
@@ -58,13 +58,13 @@
 
                            <div class="text-center text-lg-start mt-4 pt-2">
                                 <button 
-                                    class="btn btn-primary btn-lg"
+                                    class="connexionBtn"
                                     type="submit"
                                     style="padding-left: 2.5rem; padding-right: 2.5rem;">
                                     Connexion
                                 </button>
-                                <p class="small fw-bold mt-2 pt-1 mb-0">Vous n'avez pas de compte, Inscrivez-vous ! <a href={{ path('app_registerUser') }}
-                                        class="link-danger">Inscrivez-vous</a></p>
+                                <p class="RedirectionInscription">Vous n'avez pas de compte ? <a href={{ path('app_registerUser') }}
+                                        class="link-danger">Inscrivez-vous</a> !</p>
                             </div>
                         </div>
                      </div>
