--- a/dict/templates/base.html.twig
+++ b/dict/templates/base.html.twig
@@ -1,14 +1,32 @@
 <!DOCTYPE html>
-<html>
+    <html lang="fr">
+
     <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Projet dictionnaire{% endblock %}</title>
+      <meta charset="utf-8">
+      <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-        {% block stylesheets %}
+      <title>Awal App</title>
 
-        {% endblock %}
+      <!-- Logo -->
+      <link href="assets/img/awalappLogo.png" rel="logo">
 
+
+      <!-- Google Fonts -->
+      <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+
+      <!-- Vendor CSS Files -->
+      <link href="assets/vendor/aos/aos.css" rel="stylesheet">
+      <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+      <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+      <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+      <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+      <link href="assets/vendor/remixicon/remixicon.css" rel="stylesheet">
+      <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+
+      <link href="assets/css/style.css" rel="stylesheet">
+      <link href="assets/css/userFormStyle.css" rel="stylesheet">
     </head>
+
     <body>
         <nav class="navbar navbar-light py-3 px-0 overflow-hidden">
             <div class="container px-md-5">
@@ -20,10 +38,48 @@
                 </div>
             </div>
         </nav>
-        {% block body %}{% endblock %}
+         <!-- ======= Header ======= -->
+          <header id="header" class="fixed-top d-flex align-items-center">
+            <div class="container d-flex align-items-center justify-content-between">
+
+              <div class="logo">
+                <img src="assets/img/awalappLogo.png">
+              </div>
+
+            </div>
+          </header>
+
+          {% block body %}{% endblock %}
+
+
+        <footer id="footer">
+            <div class="container">
+              <div class="row d-flex align-items-center">
+                <div class="col-lg-6 text-lg-left text-center">
+                  <div class="copyright">
+                    &copy; Copyright <strong>Emilie - Melissa</strong>. Tous droits réservés
+                  </div>
+                </div>
+
+              </div>
+            </div>
+          </footer><!-- End Footer -->
 
 
         {#Les scripts javascripts#}
-        
+
+         <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+
+        <!-- Vendor JS Files -->
+        <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
+        <script src="assets/vendor/aos/aos.js"></script>
+        <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+        <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
+        <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+        <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
+        <script src="assets/vendor/php-email-form/validate.js"></script>
+
+        <!-- Template Main JS File -->
+        <script src="assets/js/main.js"></script>
     </body>
 </html>
