Première partie du html/css des pages

--- a/dict/templates/baseWord.html.twig
+++ b/dict/templates/baseWord.html.twig
@@ -26,13 +26,13 @@
       <link href="{{ asset('assets/vendor/swiper/swiper-bundle.min.css') }}" rel="stylesheet">
 
 
-    <!--Style pour le font des polices-->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=EB+Garamond:ital@0;1&display=swap" rel="stylesheet">
+      <!--Style pour le font des polices-->
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+      <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+      <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=EB+Garamond:ital@0;1&display=swap" rel="stylesheet">
     </head>
 
     <body>
@@ -45,9 +45,10 @@
               </div>
             </div>
 
-            <nav id="navbar" class="navbar">
+           <nav id="navbar" class="navbar">
               <ul>
-                <li><a class="nav-link scrollto active" href="{{ path('HomePage') }}">Home</a></li>
+                <li><a class="nav-link scrollto active" href="{{ path('app_word_index') }}">Mots</a></li>
+                <li><a class="getstarted  scrollto" href="{{ path('app_logout') }}">Deconnexion</a></li>
               </ul>
               <i class="bi bi-list mobile-nav-toggle"></i>
             </nav>
