--- a/dict/templates/base.html.twig
+++ b/dict/templates/base.html.twig
@@ -37,17 +37,15 @@
         <header id="header" class="fixed-top d-flex align-items-center">
           <div class="container d-flex align-items-center justify-content-between">
 
-            <div class="container d-flex align-items-center justify-content-between">
-              <div class="logo">
-                <img src="assets/img/awalappLogo.png">
-              </div>
+            <div class="logo">
+              <img src="assets/img/awalappLogo.png">
             </div>
 
             <nav id="navbar" class="navbar">
               <ul>
                 <li><a class="nav-link scrollto active" href="{{ path('HomePage') }}">Home</a></li>
-                 <li><a class="nav-link scrollto active" href="{{ path('app_dictionnary') }}">Dictionnaire</a></li>
-                <li><a class="getstarted scrollto" href="{{ path('app_login') }}">Se Connecter</a></li>
+                 <li><a class="nav-link scrollto" href="{{ path('app_dictionnary') }}">Dictionnaire</a></li>
+                <li><a class="getstarted  scrollto" href="{{ path('app_login') }}">Se Connecter</a></li>
                 <li><a class="getstarted scrollto" href="{{ path('app_registerUser') }}">S'inscrire</a></li>
               </ul>
               <i class="bi bi-list mobile-nav-toggle"></i>
@@ -76,14 +74,14 @@
 
          <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
-        <!-- Vendor JS Files -->
-        <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
-        <script src="assets/vendor/aos/aos.js"></script>
-        <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-        <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
-        <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-        <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
-        <script src="assets/vendor/php-email-form/validate.js"></script>
+       <!-- Vendor JS Files -->
+      <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
+      <script src="assets/vendor/aos/aos.js"></script>
+      <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+      <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
+      <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+      <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
+      <script src="assets/vendor/php-email-form/validate.js"></script>
 
         <!-- Template Main JS File -->
         <script src="assets/js/main.js"></script>
