--- a/dict/templates/word/index.html.twig
+++ b/dict/templates/word/index.html.twig
@@ -1,4 +1,4 @@
-{% extends 'base.html.twig' %}
+{% extends 'baseWord.html.twig' %}
 
 {% block title %}Word index{% endblock %}
 
@@ -36,13 +36,21 @@
             </tr>
         {% else %}
             <tr>
-                <td colspan="5">no records found</td>
+                <td colspan="5">
+                    <div class="row d-flex justify-content-center align-items-center h-100">
+                        <h5>Pas de données trouvées</h5>
+                        <img src="{{ asset('assets/img/dataNotFound.jpg') }}" class="imageData" alt="Pour les informations non trouvés">
+                    </div>
+                </td>
             </tr>
         {% endfor %}
         </tbody>
     </table>
 
-    <a href="{{ path('app_word_new') }}">Create new</a>
+    <div class="text-center text-lg-start mt-4 pt-2">
+        <p class="RedirectionInscription">Vous n'avez pas créer de mots ? <a href="{{ path('app_word_new') }}"
+                class="link-danger">Créez en</a> !</p>
+    </div>
 
     <div class="pagination">
         {{ knp_pagination_render(words) }}
