--- a/dict/templates/dictionnary/newCategorie.html.twig
+++ b/dict/templates/dictionnary/newCategorie.html.twig
@@ -1,8 +1,8 @@
-{% extends 'baseAutrePage.html.twig' %}
+{% extends 'baseDictionnary.html.twig' %}
 {% block title %}Dict index{% endblock %}
 
 {% block body %}
-    <h1>Word index</h1>
+    <h1 class="TitreWord">Rechercher par filtrage</h1>
 
     <!-- Creation d'un formulaire  -->
     <div class="filtrage">
