--- a/dict/templates/word/edit.html.twig
+++ b/dict/templates/word/edit.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
     <h1>Edit Word</h1>
 
-    {{ include('word/_form.html.twig', {'button_label': 'Update'}) }}
+    {{ include('word/_form.html.twig', {'button_label': 'Mettre à jour', 'Titre': 'Mettre à jour votre mot'}) }}
 
     <a href="{{ path('app_word_index') }}">back to list</a>
 
