--- a/dict/templates/dictionnary/index.html.twig
+++ b/dict/templates/dictionnary/index.html.twig
@@ -1,34 +1,29 @@
-{% extends 'base.html.twig' %}
+{% extends 'baseDictionnary.html.twig' %}
 
 {% block title %}Dict index{% endblock %}
 
 {% block body %}
-    <h1>Word index</h1>
+    <h1 class="TitreWord">Tous les mots du dictionnaire</h1>
 
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Def</th>
-                <th>InputWord</th>
-                <th>WordType</th>
-            </tr>
-        </thead>
-        <tbody>
-        
-        {% for word in words %}
-            <tr>
-                <td>{{ word.def }}</td>
-                <td>{{ word.inputWord }}</td>
-                <td>{{ word.wordType }}</td>
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="5">no records found</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
-
+    <!--Affichage de tous les mots du dictionnaire  -->
+    <div class="card border-info mb-3" id="cardToutProd">	
+        <div class='card-header'>Tous les mots du dictionnaire</div>
+            <div class='d-flex-grid'>
+                {% for word in words %}
+                        <div class='card'>
+                            <div class="card-body">
+                                    <h5 class='card-title'>{{ word.def }}</h5>
+                                    <p class='card-text'>{{ word.inputWord }}</p>
+                                    <p class='card-text'>{{ word.wordType }}</p>
+                            </div>
+                        </div>
+                {% else %}
+                    <h3>no records found</h3>
+                {% endfor %}
+            </div>
+        </div>
+    </div>
+    
     <div class="pagination">
         {{ knp_pagination_render(words) }}
     </div>
