--- a/dict/templates/word/index.html.twig
+++ b/dict/templates/word/index.html.twig
@@ -1,16 +1,15 @@
-{% extends 'baseWord.html.twig' %}
+{% extends 'baseWordIndex.html.twig' %}
 
 {% block title %}Word index{% endblock %}
 
 {% block body %}
-    <h1>Word index</h1>
+    <h1 class="TitreWord">Word index</h1>
 
-    <table class="table">
+    <table class="table table-bordered">
         <thead>
             <tr>
-                <th>Id</th>
-                <th>Def</th>
                 <th>InputWord</th>
+                <th>Def</th>
                 <th>WordType</th>
                 <th>actions</th>
             </tr>
@@ -19,9 +18,8 @@
         
         {% for word in words %}
             <tr>
-                <td>{{ word.id }}</td>
-                <td>{{ word.def }}</td>
                 <td>{{ word.inputWord }}</td>
+                <td>{{ word.def }}</td>
                 <td>{{ word.wordType }}</td>
                 <td>
                     <a href="{{ path('app_word_show', {'id': word.id}) }}">show</a>
@@ -47,14 +45,15 @@
         </tbody>
     </table>
 
+    <div class="pagination">
+        {{ knp_pagination_render(words) }}
+    </div>
+
     <div class="text-center text-lg-start mt-4 pt-2">
         <p class="RedirectionInscription">Vous n'avez pas créer de mots ? <a href="{{ path('app_word_new') }}"
                 class="link-danger">Créez en</a> !</p>
     </div>
 
-    <div class="pagination">
-        {{ knp_pagination_render(words) }}
-    </div>
    
 
 {% endblock %}
