redirection des utilisateurs en fonction du role + un peu de front

--- a/dict/templates/dictionnary/index.html.twig
+++ b/dict/templates/dictionnary/index.html.twig
@@ -28,10 +28,10 @@
         {{ knp_pagination_render(words) }}
     </div>
 
-     <h1>Télécharger le dictionnaire</h1>
+     <h1 class="TitreWord">Télécharger le dictionnaire</h1>
      <a href="{{ path('downloadJson') }}" class="btn btn-primary">Télécharger</a>
 
-     <h1>Mot aléatoire</h1>
+     <h1 class="TitreWord">Mot aléatoire</h1>
      <a href="{{ path('randomWord') }}" class="btn btn-primary">Mot aléatoire</a>
 
 
