--- a/dict/templates/categorie/index.html.twig
+++ b/dict/templates/categorie/index.html.twig
@@ -13,7 +13,7 @@
                         {{ form_row(form.label, {'attr': {'class': 'form-control'}}) }}
                     </div>
                     <div class="form-outline mb-4">
-                        <button type="submit" class="btn btn-primary btn-block">Ajouter Langue</button>
+                        <button type="submit" class="btn btn-primary btn-block">Ajouter</button>
                     </div>
                 {{ form_end(form) }}
             </div>
