--- a/dict/templates/word/_form.html.twig
+++ b/dict/templates/word/_form.html.twig
@@ -52,10 +52,12 @@
     </div>
 
     <div class="text-center text-lg-start mt-4 pt-2">
-            <p class="newCategorie">Creer une nouvelle catégorie : <a href="{{ path('search') }}"
+            <p class="newCategorie">Creer une nouvelle catégorie : <a href="{{ path('newcategorie') }}"
                 class="link-danger">Créer une nouvelle catégorie</a></p>
             <p class="newLanguage">Creer une nouvelle langue : <a href="{{ path('newLanguage') }}"
                 class="link-danger">Créer une nouvelle langue</a></p>
+            <p class="newLanguage">Créer une nouvelle traduction : <a href="{{ path('tradWord') }}"
+                class="link-danger">Créer une nouvelle traduction</a></p>
         </div>
 </section>
 {% endblock %}
