--- a/dict/templates/word/new.html.twig
+++ b/dict/templates/word/new.html.twig
@@ -5,5 +5,5 @@
 {% block body %}
     <h1>Create new Word</h1>
 
-    {{ include('word/_form.html.twig', {'button_label': 'S inscrire', 'Titre': 'Ajout de nouveaux mots'}) }}
+    {{ include('word/_form.html.twig', {'button_label': 'Ajouter', 'Titre': 'Ajout de nouveaux mots'}) }}
 {% endblock %}
