--- a/dict/templates/dictionnary/index.html.twig
+++ b/dict/templates/dictionnary/index.html.twig
@@ -12,8 +12,8 @@
                 {% for word in words %}
                         <div class='card'>
                             <div class="card-body">
-                                    <h5 class='card-title'>{{ word.def }}</h5>
-                                    <p class='card-text'>{{ word.inputWord }}</p>
+                                    <h5 class='card-title'>{{ word.inputWord }}</h5>
+                                    <p class='card-text'>{{ word.def }}</p>
                                     <p class='card-text'>{{ word.wordType }}</p>
                             </div>
                         </div>
