--- a/dict/templates/dictionnary/newCategorie.html.twig
+++ b/dict/templates/dictionnary/newCategorie.html.twig
@@ -10,7 +10,7 @@
         <div class="container" id="form" hidden>
             {{ form_start(form, {'method': 'POST', 'attr': {'id': 'formF', 'class': 'd-flex'}}) }}
                     <div class="form-group">
-                        {{ form_row(form.def, {'attr': {'class': 'form-control'}}) }}
+                        {{ form_row(form.inputWord, {'attr': {'class': 'form-control'}}) }}
                     </div>
                     <div class="form-group">
                         {{ form_row(form.groupWord, {'attr': {'class': 'form-control'}}) }}
@@ -29,8 +29,8 @@
                 {% for word in pagination %}
                         <div class='card'>
                             <div class="card-body">
-                                    <h5 class='card-title'>{{ word.def }}</h5>
-                                    <p class='card-text'>{{ word.inputWord }}</p>
+                                    <h5 class='card-title'>{{ word.inputWord }}</h5>
+                                    <p class='card-text'>{{ word.def }}</p>
                                     <p class='card-text'>{{ word.wordType }}</p>
                             </div>
                         </div>
