--- a/dict/templates/categorie/index.html.twig
+++ b/dict/templates/categorie/index.html.twig
@@ -1,14 +1,18 @@
 
-{% extends 'baseWord.html.twig' %}
-
-{% block title %}Hello Language Controller!{% endblock %}
+{% extends 'baseNewLangAndCategories.html.twig' %}
 
 {% block body %}
-<section class="vh-100">
+
+<section>
+
     <div class="allFormClass">
+        <div class="section-title" data-aos="fade-up" id="categorieSection">
+            <h2 class="TitreWord">Nouvelle Catégorie</h2>
+            <p>formulaire pour l'ajout d'une nouvelle catégorie</p>
+        </div>
         <div class="row d-flex justify-content-center align-items-center h-100">
             <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
-                {{ form_start(form, {'attr': {'class': 'border p-4 rounded', 'method': 'POST'}}) }}
+                {{ form_start(form, {'attr': {'class': 'border p-4 rounded','id': 'formCategorie', 'method': 'POST'}}) }}
                     <div class="form-outline mb-4">
                         {{ form_row(form.label, {'attr': {'class': 'form-control'}}) }}
                     </div>
