--- a/dict/templates/word/_form.html.twig
+++ b/dict/templates/word/_form.html.twig
@@ -2,13 +2,18 @@
 {% block title %}Ajout de nouveaux mots{% endblock %}
 
 {% block body %}
-<section class="vh-200">
+
+
+<section>
     <div class="allFormClass2">
+        <div class="section-title" data-aos="fade-up">
+            <h2 class="TitreWord">{{ Titre }}</h2>
+            <p>formulaire pour l'ajout de mots</p>
+        </div>
+
         <div class="row d-flex justify-content-center align-items-center h-100">
             <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
-                {{ form_start(form, {'attr': {'class': 'border p-4 rounded', 'method': 'POST'}}) }}
-                    
-                    <h3 class="titreWordText">{{ Titre }}</h3>
+                {{ form_start(form, {'attr': {'class': 'border p-4 rounded','id': 'formWord', 'method': 'POST'}}) }}
                     
                     <div class="form-outline mb-4">
                         <div class="form-group">
@@ -50,6 +55,12 @@
             </div>
         </div>
     </div>
+
+    <div class="section-title" data-aos="fade-up">
+        <h2 class="TitreWord">Actions</h2>
+        <p>Voici les différentes actions possible</p>
+    </div>
+
 
     <div class="text-center text-lg-start mt-4 pt-2">
             <p class="newCategorie">Creer une nouvelle catégorie : <a href="{{ path('newcategorie') }}"
