--- a/dict/templates/word/index.html.twig
+++ b/dict/templates/word/index.html.twig
@@ -3,15 +3,20 @@
 {% block title %}Word index{% endblock %}
 
 {% block body %}
-    <h1 class="TitreWord">Word index</h1>
 
-    <table class="table table-bordered">
-        <thead>
+    <div class="section-title" data-aos="fade-up">
+        <h2 class="TitreWord">Vos Mots</h2>
+        <p>Tous vos mots</p>
+    </div>
+
+    <table class="table table-bordered" id="tableWord">
+        <thead class="table-primary">
             <tr>
                 <th>InputWord</th>
                 <th>Def</th>
                 <th>WordType</th>
                 <th>actions</th>
+                <th>Supression</th>
             </tr>
         </thead>
         <tbody>
@@ -22,8 +27,13 @@
                 <td>{{ word.def }}</td>
                 <td>{{ word.wordType }}</td>
                 <td>
-                    <img class="showImage" src="{{ asset('assets/img/show.png') }}"><a href="{{ path('app_word_show', {'id': word.id}) }}">Show</a>
-                    <img class="editImage" src="{{ asset('assets/img/edit.png') }}"><a href="{{ path('app_word_edit', {'id': word.id}) }}">Edit</a>
+                    <div class="actions">
+                        <img class="showImage" src="{{ asset('assets/img/show.png') }}">
+                        <a href="{{ path('app_word_show', {'id': word.id}) }}">Show</a>
+
+                        <img class="editImage" src="{{ asset('assets/img/edit.png') }}">
+                        <a href="{{ path('app_word_edit', {'id': word.id}) }}">Edit</a>
+                    </div>
                 </td>
                 <td>
                     <form method="post" action="{{ path('app_word_delete', {'id': word.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
