--- a/dict/templates/security/login.html.twig
+++ b/dict/templates/security/login.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
 <section class="vh-100">
-    <div class="allFormClass">
+    <div class="allFormClass3">
         <div class="row d-flex justify-content-center align-items-center h-100">
             <div class="col-md-9 col-lg-6 col-xl-5">
                 <img src="assets/img/undraw_bliblo.svg"
